# LoopSubdivision

./: CMakeLists.txt  Makefile  README.md
Core/: Point.h  Solid.cpp  Solid.h
Subdivision/: Subdivision.cpp
